<resources>
    <string name="app_name">PariEnLigne</string>
    <string name="your_app">PariApp</string>
    <string name="tag_line">Effectuer vos paris en ligne</string>
    <string name="welcome">Bonjour!</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="login">Login</string>
    <string name="forgot_password">Mot de passe oublié?</string>
    <string name="create_account">Créer un compte</string>
    <string name="home">Accueil</string>
    <string name="logout">Se déconnecter</string>
    <string name="account">Compte</string>
    <string name="profil">Profil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="football">Football</string>
    <string name="tenis">Tenis</string>
    <string name="chevaux">Chevaux</string>
    <string name="title_activity_accueil">AccueilActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="accueil">Accueil</string>
    <string name="compte">Compte</string>
    <string name="historique">Historique</string>
    <string name="liste_des_paris_disponibles">Liste des paris disponibles</string>
    <string name="map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="pari">Pari</string>
    <string name="loading">Chargement...</string>
    <string name="website_address">S\'inscrire? <a href="https://frontapiapp.herokuapp.com/#/register">lien vers la page</a></string>
    <string name="mes_paris">Mes paris</string>

</resources>