<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_dark"
            android:title="@string/accueil" />
        <item
            android:id="@+id/nav_compte"
            android:icon="@drawable/ic_account_dark"
            android:title="@string/compte" />
        <!--<item
            android:id="@+id/nav_historique"
            android:icon="@drawable/ic_history_dark"
            android:title="@string/historique" />-->
        <item
            android:id="@+id/nav_mes_paris"
            android:icon="@drawable/ic_baseline_event_note_24"
            android:title="@string/mes_paris" />
        <!--<item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_dark"
            android:title="@string/map" />-->
    </group>
</menu>